# aoc23

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
src/day01/: CMakeLists.txt  day01.cpp  day01.h  main.cpp  test.cpp
src/day02/: CMakeLists.txt  day02.cpp  day02.h  main.cpp  test.cpp
src/day03/: CMakeLists.txt  day03.cpp  day03.h  input.h  main.cpp  test.cpp
src/day04/: CMakeLists.txt  day04.cpp  day04.h  input.h  main.cpp  test.cpp
